# tree-sitter-flare

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  flare.dylib  go.mod  grammar.js  justfile  log.txt  package.json  parser.dylib  paths.txt  pyproject.toml  setup.py  tree-sitter-flare.wasm  tree-sitter.json  tree.txt
bindings/go/: binding_test.go
bindings/python/tree_sitter_flare/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterFlare/: flare.h
queries/: highlights.scm  locals.scm
src/: Cargo.toml  Package.swift  grammar.json  node-types.json  parser.c  parser.dylib  tree-sitter.json
src/bindings/c/: tree-sitter-flare.pc.in
src/bindings/go/: binding.go
src/bindings/node/: binding.cc  index.js
src/bindings/python/tests/: test_binding.py
src/bindings/python/tree_sitter_flare/: binding.c
src/bindings/rust/: build.rs  lib.rs
src/bindings/swift/TreeSitterFlareTests/: TreeSitterFlareTests.swift
src/src/: grammar.json  node-types.json  parser.c
test/corpus/: def_then_spec.flr  empty_root.flr  generics.flr  ntest.flr  patterns.flr  returns_zero.flr  single_spec.flr  spec_then_def.flr  two_defs.flr  two_spec.flr  use_macro.flr
